fixed extra space of section-7

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body{
     background-color: #1E2538 ;
     color: white;
     overflow-x: hidden;
-
 }
 
 .page-main-title{
@@ -30,6 +29,7 @@ body{
 }
 /* section-1 */
 .section-1 {
+
     align-items: center;
     position: absolute;
     top: 150px;
@@ -42,7 +42,7 @@ body{
     justify-content: space-between;
     align-items: center;
     gap: 30px;
-} 
+}
 .row-2{
     display: flex;
     flex-direction: row;
@@ -50,7 +50,7 @@ body{
     align-items: center;
     margin-top: 20px;
 }
-    
+
 .row-1-part-1 h2 {
     max-width: 351px;
 }
@@ -97,6 +97,7 @@ body{
     justify-content: center;
     align-items: center;
     text-align:center;	
+    position: relative;
 }
 .section-2-data h3{
     font-size: 2.25rem;
@@ -109,41 +110,45 @@ body{
     line-height: 30px;
 }
 .section-2-data {
-    border: 4px solid #986352;
-    display: inline-block;
     margin: 25px auto;
     padding: 40px 30px;
     position: relative;
-    width: 770px;
+    width: 770px; 
+    /* position: absolute; */
 }
-/* .section-2-data p, .section-2-data h3 {
-  position: relative;
-  display: block;
-  z-index: 5;
+.corners-holder{
+    height: 350px;
+    width: 850px;
+    position: absolute;
 }
-.section-2-data::before,
-.section-2-data::after {
-  content: '';
-  position: absolute;
-  background: #1E2538;
+.corner-angle{
+    height: 50px;
+    width:55px;
+    position: absolute;
+    border: 4px solid #996252;
 }
-
-.section-2-corner::before {
-  width: calc(100% + 50px + 4px - 120px);
-  height: calc(100% + 4px);
-  top: -2px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
+.corner-angle.left{
+    border-right: none;
+    border-bottom: none;
+    left: 0;
 }
-.section-2-corner::after {
-  height: calc(100% + 50px + 4px - 120px);
-  width: calc(100% + 4px);
-  left: -2px;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 1;
-}  */
+.corner-angle.right{
+    border-left:none;
+    border-bottom: none;
+    right:0;
+}
+.corner-angle.bottom-left{
+    border-top: none;
+    border-right: none;
+    left:0;
+    bottom: 0;
+}
+.corner-angle.bottom-right{
+    border-top: none;
+    border-left: none;
+    bottom: 0;
+    right:0;
+}
 
 /* end of section-2 */
 
@@ -335,18 +340,139 @@ body{
 /* end of section-5 */
 
 /* section-6 */
+.section-6{
+    margin-bottom: 40rem;
+}
 .sec-6-bg{
     width: 850px;
     height: 500px;
     background-color: #986352;
 }
 
+.sec-6-box-1 {
+    display: flex;
+    align-items: center;
+    width: 380px;
+    height: 380px;
+    background-color: #1e2538;
+    z-index: 3;
+    position: relative;
+    left: 100px;
+    bottom: 60px;
+}
+.sec-6-box-1-content {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    border: 1px solid #986352;
+    height: 320px;
+    width: 320px;
+    margin: 0 auto;
+}
+.sec-6-box-1-content p {
+    color: #996242;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1rem;
+    line-height: 1.8;
+    margin: 10px;
+}
+.sec-6-box-2{
+    width: 480px;
+    height: 450px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center; 
+    z-index: 2;
+    position: relative;
+    left: 700px;
+    bottom: 600px;
+}
+.sec-6-box-2-content{
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 25px 0 25px;
+    border: 1px solid #986352;
+}
+.sec-6-box-2-content h2{
+    color: #996252;
+    font-family: 'Playfair Display', serif;
+    font-size: 2.25rem;
+    font-weight: 400;
+    margin:0px 0px 34px 0px;
+}
+.sec-6-box-2-content p{
+    color: #000000;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
+    line-height: 1.8;
+    margin:0px 10px 40px 10px;
+}
+.sec-6-box-2-content a{
+    color: #996242;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
+    border: 1px solid #986352;
+    text-decoration: none;
+    letter-spacing: 3px;
+    padding: 12px;
+    text-align: center;
+    margin: 0;
+}
 
+/* end of section-6 */
+ 
+/* section-7 */
+.section-7{
+    margin-bottom: 15rem;
+}
 
+.sec-7-wrap1{
+    display: inline-block;
+    width: 56%;
+    position: relative;
+    left: 100px;
+    top: 20px;
+}
 
+.section-7 h1{
+    font-family: 'Playfair Display', serif;
+    font-size:3rem;
+    font-weight: 400;
+    margin-bottom: 90px;
+}
 
+.section-7 p{
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.8;
+    width: 420px;
+    margin-top: 80px;
+}
 
+.sec-7-wrap2{
+    display: inline-block;
+    width: 43%;
+    vertical-align: top;
+}
 
+.img-bg-wrapper{
+    position: relative;
+}
+
+.sec-7-bg{
+    background-color: #986352;
+    height: 530px;
+    width: 420px;
+    position: absolute;
+    margin: 100px 0 0 80px;
+}
+
+/* end of section-7 */
 
 
 
@@ -393,19 +519,20 @@ body{
     height: 564px;
     width: 945px;
     object-fit: cover;
+    position: relative;
+    left: 80px;
+    top: 120px;
+    transform: scale(1.0);
+    z-index: 1;
 }
 .img7{
     height: 565px;
     width: 438px;
     object-fit: cover;
-    /* position: relative;
-    top: 70px; */
+    position:relative;
 }
 .img8{
     height: 546px;
     width: 435px;
     object-fit: cover;
-    /* position: relative;
-    bottom: 80px;
-    left: 60px; */
 }
